<?xml version="1.0" encoding="utf-8"?>
<!-- /*	
**	Copyright 4. Mai 2015 Entwicklerteam:
**	-	Böttcher, Marcel [egitarre1@gmail.com]
**	-	Glawe, Patrick [patrickglawe@arcor.de]
**	-	Gordon, Matthias [gordon.matthias@googlemail.com]
**	-	Korten, Johanna [johanna.korten@bg.fhdw.de]
**	-	Niedermeier, Marc [marc-niedermeier@web.de]
**	-	Wiegand, Matthias [matthias@compicture.de]
**
**	Der Stadtentwicklungsbetrieb Bergisch Gladbach - AäR hat ein Nutzungsrecht 
**	am Quellcode. Dieser darf im Rahmen der Weiterentwicklung der GEOpfad - 
**	Applikation verändert werden.
**
**	Ohne ausdrückliche Zustimmung der Verfasser darf der Quellcode Dritten nicht
**	zugänglich gemacht werden.
**
**	Eine Vervielfältigung und Veröffentlichung des Quellcodes ohne ausdrückliche
**	Genehmigung - auch in Auszügen - ist nicht erlaubt.
**
**	Weitere Informationen entnehmen Sie bitte der README.md
*/ -->
<resources>

    <string name="app_name">GEOpfad Bergisch Gladbach</string>
    <string name="NavigationLocation"></string>
    
    <!-- Activity Start -->
    <string name="Willkommen">Willkommen zum GEOpfad</string>
    <string name="Erklaerung">Diese App bietet ihnen alle möglichen Infos rund um den Geopfad. Dabei handelt es sich um einen unter Geologen weltbekannten Rundweg durch Bergisch Gladbach. Auf dem Weg findet man zahlreiche geologisch wertvolle Funde, die eine Geschichte aus vergangenen Zeiten erzählen.</string>
    <string name="Wetter">Hier das aktuelle Wetter in Bergisch Gladbach:</string>
    <string name="Button_Map">Los!</string>
    
    <!-- MapFragment -->
    <string name="activity_location">ActivityLocation</string>
    <string-array name="string_spinner">
        <item>Alle Orte anzeigen</item>
        <item>Nur besuchte Orte anzeigen</item>
        <item>Nur unbesuchte Orte anzeigen</item>
    </string-array>
    <string name="which_places">Welche Orte sollen angezeigt werden?</string>
    
    <!-- WeatherCodes -->
    <string name="weather_thunderstorm">thunderstorm</string>
    <string name="weather_rain_snow">rain_snow</string>
    <string name="weather_drizzle">drizzle</string>
    <string name="weather_flurries">flurries</string>
    <string name="weather_snow">snow</string>
    <string name="weather_sleet">sleet</string>
    <string name="weather_fog">fog</string>
    <string name="weather_cloudy">cloudy</string>
    <string name="weather_mostly_cloudy">mostly_cloudy</string>
    <string name="weather_partly_cloudy">partly_cloudy</string>
    <string name="weather_clear">clear</string>
    <string name="weather_storm">storm</string>
    
    <!-- Weather parser -->
    <string name="curr_weather_tag">yweather:condition</string>
    <string name="forecast_weather_tag">yweather:forecast</string>
    <string name="curr_weather_day">date</string>
    <string name="forecast_weather_day">day</string>
    <string name="weather_code">code</string>
    <string name="curr_weather_temp">temp</string>
    <string name="forecast_weather_high">high</string>
    <string name="forecast_weather_low">low</string>
    
    <!-- Error-Codes -->
    <string name="alert_fill_all_fields">Bitte füllen Sie alle Felder aus!</string>
    <string name="wait_dialog">Bitte, warten&#8230;</string>
    <string name="no_internet">Kein Internet, Wetterdaten nicht verfügbar</string>
    <string name="alert_gps_no_signal">Kein GPS Signal!</string>
    <string name="alert_gps_turn_on">Bitte schalten Sie GPS ein!</string>
    <string name="gps_hint_turn_on">Bitte GPS einschalten</string>
    
    <string name="add_location">Add Location</string>
    <string name="empty_listview">Keine Orte gefunden.</string>
    <string name="search_actionbar">Suchen</string>
    <string name="visited">Besucht</string>
    <string name="notvisited">Nicht besucht</string>
    <string name="filechooser_startdirectory">/sdcard/</string>
    <string name="imageview1">First Image from Drawable.</string>
    <string name="imageview2">Second Image from Drawable.</string>
    <string name="imageview3">Third Image from Drawable.</string>
    <string name="extimageview">Image from Sdcard.</string>
    <string name="different_to_location">Luftlinie zum Ort:</string>
    <string name="new_location_title">Neuer Ort</string>
    <string name="new_location_headline_general">Allgemein</string>
    <string name="et_hint_location_name">Ortname</string>
    <string name="et_hint_location_description">Ortbeschreibung</string>
    <string name="new_location_headline_coordination">Koordinaten</string>
    <string name="et_hint_location_latitude">Latitude</string>
    <string name="et_hint_location_longitude">Longitude</string>
    <string name="btn_current_coordination">Aktuelle Koordinaten</string>
    <string name="new_location_headline_image">Bild</string>
    <string name="listview_image">Miniaturbild im ListView</string>
    <string name="intent_extras_image_url">image_url</string>
    <string name="xml_file_name">/orte.xml</string>
    <string name="xml_directory_name">/GeoPfad</string>
    <string name="tag_ort">ort</string>
    <string name="tag_ort_name">name</string>
    <string name="tag_ort_id">id</string>
    <string name="tag_ort_about">about</string>
    <string name="tag_ort_location_latitude">latitude</string>
    <string name="tag_ort_location_longitude">longitude</string>
    <string name="tag_ort_ext_image_url">extImageUrl</string>
    <string name="hint_new_ort_added">Ort wurde hinzugefügt!</string>
    <string name="root_tag_ort">orte</string>
    <string name="tag_ort_image">image</string>
    <string name="tag_ort_image2">image2</string>
    <string name="tag_ort_image3">image3</string>
    <string name="tag_ort_visitkey">visitKey</string>
    <string name="tag_listview_ort_id">ID</string>
    <string name="intent_extras_list_length">listLength</string>
    <string name="scale_internal_image">internal</string>
    <string name="scale_external_image">external</string>
    <string name="scale_destination_fragment_list">list</string>
    <string name="scale_destination_activity_location">location</string>
    <string name="scale_destination_activity_addlocation_image_preview">preview</string>
    <string name="scale_destination_activity_start_image_snail">schnecke</string>
    
    <!-- Activity About -->
    <string name="about_text_city">
         Stadt Bergisch Gladbach
\nDer Bürgermeister
\nKonrad-Adenauer-Platz 1
\n51465 Bergisch Gladbach 
\nTel. 02202 14-0 (Zentrale)
\nFax 02202 14-2300
\nE-Mail: info@bergischgladbach.de 
\n
</string>
 <string name="about_text_app">
GEOpfad Bergisch Gladbach
\nVersionsnummer 1.0
\n
\nEntwickelt von:
\nMarcel Böttcher
\nPatrick Glawe
\nMatthias Gordon
\nJohanna Korten
\nMarc Niedermeyer
\nMatthias Wiegand
\n
\n
\nCopyright © 2015 							
\nAlle Rechte vorbehalten/All rights reserved	
\n
\nWetterdienst von:</string>
    <string name="about_title">Impressum</string>
    <string name="version">1.0</string>
    <string name="bar_title">GEOpfad BG</string>    
</resources>
