<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background" >
	
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="2dp"
	    android:layout_marginRight="10dp"
	    android:background="@color/background"
	    android:orientation="vertical">
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_margin="10dp"
	        android:fontFamily="sans-serif-bold"
	        android:text="@string/about_title"
	        android:textSize="20sp" />
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:layout_marginBottom="5dp"
	        android:text="@string/about_text_city"
	        android:textSize="15sp" />
	
	    <ImageView
	        android:id="@+id/imageView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:src="@drawable/ic_launcher" />
	    
	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="10dp"
	        android:text="@string/about_text_app"
	        android:textSize="15sp" />
	  
	   		<ImageView
	   		    android:id="@+id/imageView1"
	   		    android:layout_width="wrap_content"
	   		    android:layout_height="wrap_content"
	   		    android:layout_marginBottom="10dp"
	   		    android:layout_marginLeft="10dp"
	   		    android:src="@drawable/yahoo_weather" />
	    
	</LinearLayout>
</ScrollView>