<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="@color/background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-bold"
        android:text="@string/Willkommen"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_margin="10dp"
        android:text="@string/Erklaerung"
        android:textSize="15sp" />

   	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"        
        android:layout_marginBottom="10dp">
        
        <ImageView
      		android:adjustViewBounds="true"
            android:id="@+id/schneckeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />    
    </LinearLayout>
    
   	<RelativeLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content">
   	
   	<Button
   	    android:id="@+id/btnWeather"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_gravity="left"
   	    android:text="Wetter" />
   	    
   	<Button
   	    android:id="@+id/ToActivityMainButton"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentLeft="false"
   	    android:layout_alignParentRight="true"
   	    android:text="@string/Button_Map" />

</RelativeLayout>
    
</LinearLayout>