<?xml version="1.0" encoding="utf-8"?>
	<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background" >
	
		<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical" >
		
			
			<HorizontalScrollView
							android:id="@+id/HorizontalScrollView01"
							android:layout_height="match_parent"
							android:layout_width="wrap_content">
							
					<LinearLayout
								android:orientation="horizontal"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">
								
								<ImageView
								android:adjustViewBounds="true"
								android:id="@+id/imageView1"
								android:layout_width="match_parent"
								android:layout_height="wrap_content" />
								
								<ImageView
								android:adjustViewBounds="true"
								android:id="@+id/extImageView"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"/>
								
								<ImageView
								android:adjustViewBounds="true"
								android:id="@+id/imageView2"
								android:layout_width="match_parent"
								android:layout_height="wrap_content" />
								
								<ImageView
								android:adjustViewBounds="true"
								android:id="@+id/imageView3"
								android:layout_width="match_parent"
								android:layout_height="wrap_content" />										
					</LinearLayout>
				</HorizontalScrollView>
				


				<TextView
					android:id="@+id/textView2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="10dp"
					android:layout_gravity = "center_vertical|center_horizontal"
					android:textSize="20sp" />
				

				
			<TableRow
					android:id="@+id/lnlVisit"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="right" >

			
				<TextView
					android:id="@+id/txtVisitStatus"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="10dp"
					android:layout_marginRight="10dp"
					android:text=""
					android:textSize="15sp" />
				
				<CheckBox
					android:id="@+id/btnVisit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text=""
					android:textSize="15sp" />
			</TableRow>
	
				<RelativeLayout
				    android:layout_width="match_parent"
				    android:layout_height="fill_parent"
				    android:paddingBottom="20dp" >
			
			<TableRow
					android:id="@+id/TableRow2"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:gravity="center" >
				
			    	
			
				<TextView
					android:id="@+id/txtDescription"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/different_to_location"
					android:textSize="15sp" />
			
				<TextView
				    android:id="@+id/txtDistance"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/gps_hint_turn_on"
				    android:textSize="15sp" />
			
			</TableRow>
			</RelativeLayout>
			<TableRow
					android:id="@+id/TableRow3"
					android:orientation="horizontal"
					android:layout_margin="10dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:gravity="center" >
			
			<RelativeLayout android:layout_width="match_parent" android:layout_height="fill_parent" >
			    	<Button
				    android:id="@+id/btnShowOnMap"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentBottom="true"
                	android:layout_alignParentLeft="true"
                	android:layout_gravity="left"
				    android:background="@drawable/button_map" />
				
				<Button
					android:id="@+id/btnNavigation"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentBottom="true"
               		android:layout_alignParentRight="true"
					android:text="@string/NavigationLocation"
					android:textSize="25sp"
					android:background="@drawable/button_navigation" />
				</RelativeLayout>

			</TableRow>
	</LinearLayout>
</ScrollView>